--- a/src/views/instruction.html
+++ b/src/views/instruction.html
@@ -4,9 +4,80 @@
 {% include "templates/pageTopMenu.html" %}
 <hr>
 <link rel="stylesheet" href="/css/search.css">
+<link rel="stylesheet" href="/css/reports.css">
     <div class="content row">
         <div class="result-search col-xl-9 col-md-7 col-sm-7 col-6">
-            <center><p>Здесь будет записанная в БД инструкция для пользователя</p></center>
+            {%if session.stakeholder%}
+            <div class="container">
+                    <center><h4>Инструкция работы в личном кабинете 
+                            <br>(для СХ)
+                            </h4></center>
+    
+                    <b>Слева в личном кабинете находится зона со списком опросов. </b>
+                    <ul>
+                        <li><b>Блок «Активные опросы». </b><p> Активные опросы, это актуальные опросы, которые  проводит компания в текущий период времени. Если блок «Активные опросы» пустой – это значит, что в настоящие период времени никаких опросов не проводится.</p> </li>
+                        <li><b>Для того чтобы принять участие в «Активном опросе»:</b><br>
+                            <ul>
+                                <li><p><b>Шаг №1. </b>Кликните на название опроса. Вы перейдете к электронной анкете. </p></li>
+                                <li><p>Шаг №2. </b>Оветьте на вопросы в соответствии с инструкцией, которая будет продолжена в начале опроса. Вы можете прерваться в заполнении опроса, выйти из личного кабинета, вернуться в него и продолжить заполнения анкеты</p></li>
+                                <li><p><b>Шаг №3. </b>После завершения заполнения анкеты кликните на кнопку «Отправить».</p></li>
+                                <li><p><b>Внимание. </b>Вы можете заполнить анкету только единожды. При попытке повторного заполнения вопросы анкеты будут неактивны. </p></li>
+                            </ul>
+                        </li>
+                        <li><b>Блок «Результаты опросов». </b><p> Здесь размещены аналитические справки по результатам проведенных ранее вопросов. Для получения аналитической справки кликните на название интересующего вас опроса и вы перейдете на страницу, где представлены соответствующие данные. </p> </li>
+                        
+                    </ul>
+                    <b>По центру в личном кабинете находится зона с обсуждением документов.</b>
+                        <p style="text-indent:35px">В этой зоне располагаются проекты документов и материалов, по которым компания  ожидает от вас обратной связи. Также здесь можно задать вопросы и получить ответы по каждому обсуждаемому документу.</p>
+                        <ul>
+                                <li><p><b>Каждый документ </b>имеет  название и дату, до которой нужно дать обратную связь (включительно). После истечения указанной даты чат с администратором становится неактивным.   Сам текст обсуждаемого документа (материала) находится в pdf-файле, который вы скачиваете для его изучения.</p> </li>
+                                <li><p><b>Чат с администратором платформы  </b>имеет два поля.  В одном поле вы записываете свои вопросы и/или предложения (комментарии) и нажимаете «enter» и сообщение уходит администратору. Автоматически указывается дата, когда вы написали сообщение.  В другом поле вы видите ответ администратора и дату, когда этот ответ вам был направлен. </p> </li>
+                                <li><b>Обсуждение документов (материалов) может вестись в двух режимах: </b><br>
+                                    <p>получение обратной связи и согласование.</p>
+                                    <ul>
+                                        <li><p>-	Если обсуждение ведется в режиме согласования, то рядом с названием документа автоматически появляется поле «Подтвердить согласование документа».  В этом случае, вам необходимо выразить свое согласие с документом (материалом), отметив галочкой поле «Подтвердить согласование документа». Если вы не поставили «галочку», то это означает, что вы документ не согласовали. В этом случае необходимо в чате зафиксировать свои предложения и их пояснения, после учета которых, вы согласуете документ.   Внимание! В случае положительного согласования документа отказаться от ранее принятого решения нельзя. </p></li>
+                                        <li><p>-	Если обсуждение ведется в режиме обратной связи, то Вы должны будете предоставить лишь свои комментарии к документу. В таком случае поле «Подтвердить согласование документа» будет отсутствовать.</p></li>
+                                    </ul>
+                                </li>
+                                <li><b>Блок «Результаты опросов». </b><p> Здесь размещены аналитические справки по результатам проведенных ранее вопросов. Для получения аналитической справки кликните на название интересующего вас опроса и вы перейдете на страницу, где представлены соответствующие данные. </p> </li>
+                                
+                            </ul> 
+                            <p><b>Внимание. </b>Вы можете заполнить анкету только единожды. При попытке повторного заполнения вопросы анкеты будут неактивны. </p>
+                    
+                </div>
+            {% else %}
+            <div class="container">
+                <center><h4>Инструкция пользователя платформы</h4></center>
+
+                <b>Назначение платформы</b>
+                <br>
+                <p>Платформа для взаимодействия с заинтересованными сторонами (ПВЗС) предназначена для организации интернет-коммуникации Компании со стейкхолдерами по различным вопросам, связанным с публичной отчетностью Компании. </p>
+                <br>
+                <b>Разделы и материалы платформы:</b>
+                <br>
+                <p>
+                На «Главной странице» размещена краткая информация о Компании и лента мероприятий. Дана ссылка на предыдущую версию платформы взаимодействия с заинтересованными сторонами.
+                На странице «Публичные отчеты» размещены годовые отчеты Инжинирингового дивизиона. К каждому отчету дана краткая аннотация: приоритетные темы отчета, стандарты, в соответствии с которыми он подготовлен, конкурсы, в которых он занял призовые места. На странице можно скачать полную и краткую версию отчетов на русском и английском языках. 
+                На странице «Мероприятия и материалы» размещены названия и краткая аннотация всех публичных мероприятий, проведенных в рамках подготовки годовых отчетов АО ИК «АСЭ». На странице каждого отдельного мероприятия дано его развернутое описные, прикреплены материалы с возможностью их скачивания.
+                На странице «Опросы и результаты» размещены названия, цели и аннотация актуальных (проводимых в настоящий момент) публичных опросов посетителей платформы. По ссылке можно зайти на конкретный опрос и принять в нем участие. Также на странице представлена краткая аннотации аналитики результатов, проведенных ранее опросов.  
+                На странице Карта заинтересованных сторон представлена информация о подходах Компании к взаимодействию с заинтересованными сторонами и актуальная карта заинтересованных сторон. 
+                </p>
+                <br>
+                <b>
+                Участники платформы и процедура их регистрации 
+                </b>
+                <br>
+                <p>
+                 «Незарегистрированный пользователь» – любой посетитель платформы.  Имеет доступ к публичным материалам платформы (годовые отчеты, материалы проведенных мероприятий), а также возможность их скачивания.  эти материалы.   за исключением возможности учувствовать в публичных опросах и получать аналитику по результатам таких опросов.  
+                «Зарегистрированный пользователь» - любой зарегистрировавшийся посетитель платформы.  Зарегистрированные пользователи, помимо доступа к публичным материалам, размещенным на платформе (годовые отчеты, материалы проведенных мероприятий), получают возможность участвовать в проводимых компанией  публичных опросах и скачивать аналитику по результатам таких опросов.  Для регистрации необходимо перейти на страницу Регистрация. Регистрация осуществляется автоматически по факту заполнения регистрационной формы.  
+                «Заинтересованные стороны (стейкхолдеры) - это физические и/или юридические лица, а также группы лиц, которые своими действиями влияют на деятельность Инжинирингового дивизиона Госкорпорации «Росатом» и/или испытывают на себе ее влияние. «Стейкхолдеры» получают расширенный доступ к материалам и функционалу платформы через «личный кабинет».  В личном кабинете стейкхолдеры имеют возможность учувствовать в обсуждении материалов (концепций, проектов отчетов и т.п.), получать персональные приглашения на мероприятия, наряду с общими опросами участвовать в опросах стейкхолдеров и получать аналитику по результатам таких опросов.  
+                Для регистрации на платформе в качестве «Стейкхолдера» необходимо перейти на страницу Регистрация и заполнить анкету. После чего заявка будет направлена на рассмотрение руководству АО ИК «АСЭ». Длительность рассмотрения заявки составляет до ??? недель с даты подачи. После подтверждения вашей заявки, вам на почту будет отправлен пароль и логин для первого входа в личный кабинет. Пароль и логин может быть самостоятельно изменен на другой по усмотрению стейкхолдера.
+                </p>
+                <br>
+                <p>Уважаемые посетители платформы, все предложения и замечания по функционированию платформы взаимодействия с заинтересованными сторонами вы можете оставить по <a href="/feedback">ссылке</a>.</p>
+                
+            </div>
+            {% endif %}
         </div>
         {% include "templates/sideMenuTemplate.html" %}
     </div>
