--- a/src/views/templates/pageTemplate.html
+++ b/src/views/templates/pageTemplate.html
@@ -37,7 +37,7 @@
       </form>
       {%if sh%}
       <form action="/lk/logout">
-        <input type="submit" value="выйти" class="auth-button btn btn-primary btn-block exit">
+        <button type="submit" class="exit">Выйти</button>
       </form>
       {%endif%}
     </div>
