--- a/src/views/events.html
+++ b/src/views/events.html
@@ -11,23 +11,19 @@
         <div class="col-xl-9 col-md-7 col-sm-7 col-6">
         {% for event in events %}
           <div class="card flex-md-row mb-4 box-shadow h-md-250 cards">
-          <img class="card-img-right flex-auto d-none d-lg-block mr-2" data-src="" alt="" style="width: 230px; height: 350px;" src="/file/{{event.img}}" data-holder-rendered="true">
+          <img class="card-img-right flex-auto d-none d-lg-block mr-2" data-src="" alt="" style="width: 250px; height: 400px;" src="/file/{{event.img}}" data-holder-rendered="true">
               <div class="card-body d-flex flex-column align-items-start">
                 <h3 class="mb-0">
                   <img src="/img/event.png">
                   <a class="text-dark" href="/events/id/{{event._id}}" >{{event.name}}</a>
                 </h3>
                 
-                <div class="mb-1 text-muted mb-auto">{{event.creatingDate}}</div>
+                <div class="mb-1 text-muted mb-auto">{{event.eventDate}}</div>
                   <div class="container">
                     <div class="row justify-content-around">
-                        <div class="mb-2"> 
+                        <div class="mb-2">
                             <h6>
-                                <img src="img/eventdate.png"><a href="">{{event.eventDate}}</a>
-                            </h6>
-                            <br>
-                            <h6>
-                                    <img src="img/eventadress.png"><a href="">{{event.address}}</a>
+                                    <img src="img/event.png" class="mr-1"><a href="">{{event.address}}</a>
                             </h6>
 
                             
@@ -35,11 +31,11 @@
                           <div class="mb-2"> 
                               {%if (event.annotation) %}
                               <h6>
-                                    <img src="img/allreport.png"><a href="/file/{{ event.annotation }}">Скачать аннотацию</a>
+                                    <img src="img/allreport.png" class="mr-1"><a href="/file/{{ event.annotation }}">Скачать аннотацию</a>
                               </h6>
                               {% else %}
                               <h6>
-                                    <img src="img/allreport.png"><a href="">Аннотация еще не добавлена</a>
+                                    <img src="img/allreport.png" class="mr-1"><a href="">Аннотация еще не добавлена</a>
                               </h6>
                               {% endif %}
                               
@@ -47,7 +43,7 @@
                   </div>
                 
                   </div>
-                  <p class="card-text mb-auto"><img src="img/eventthems.png">{{event.description}}</p>
+                  <p class="card-text mb-auto"><img src="img/reportthems.png" class="mr-1">{{event.description}}</p>
                 </div>
           </div>
             
