--- a/src/views/lkadmin.html
+++ b/src/views/lkadmin.html
@@ -245,7 +245,7 @@
                     </div>
                     <div class="form-group">
                         <label for="eventAddress">Адрес</label>
-                        <input type="text" class="form-control" id="eventAddress"  placeholder="">
+                        <input type="text" class="form-control" id="eventAddress" name="address"  placeholder="">
                     </div>
                     <div class="form-group">
                             <label for="annotationIvent">Загрузите анотацию мероприятия</label>
