--- a/src/views/templates/sideMenuTemplate.html
+++ b/src/views/templates/sideMenuTemplate.html
@@ -38,7 +38,7 @@
                 </li>
 
                 <li>
-                        <a href="#">
+                        <a href="/about">
                                 <div class="wrapper">
                                         <img src="/img/lk/about_company.png" alt="psurveys">
                                         О компании
@@ -47,6 +47,7 @@
                 </li>
 
                 {% if session.stakeholder %}
+                
                 <li>
                         <a href="/instruction">
                                 <div class="wrapper">
@@ -55,6 +56,16 @@
                                 </div>
                         </a>
                 </li>
+                <li>
+                        <a href="/feedback">
+                                        <div class="wrapper">
+                                                <!-- <img src="/img/lk/about_company.png" alt="psurveys"> -->
+                                                обратная связь
+                                        </div>
+                                </a>
+                </li>
+
+                
                 {% endif %}
         </ul>
 </div>
