--- a/src/views/logPageAdmin.html
+++ b/src/views/logPageAdmin.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <!-- нужны такие формы -->
-        <form action="/login" method="POST">
+        <form action="/logadmin" method="POST">
             <input name="login" placeholder="login">
             <input name="password" type="password" placeholder="pass">
             <button type="submit">войти</button>
