--- a/src/views/mainPage.html
+++ b/src/views/mainPage.html
@@ -41,7 +41,7 @@
                         </div>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-5 col-sm-12 col-12 list-item">
-                        <img align="left" src="/img/Мероприятия.png" width="25px" height="25px" class="img-menu2">
+                        <img align="left" src="/img/мероприятия.png" width="25px" height="25px" class="img-menu2">
                         <div class="inner">
                                 <a class="align-self-center" href="/events">
                                        Мероприятия и материалы 
@@ -49,7 +49,7 @@
                         </div>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-5 col-sm-12 col-12 list-item">
-                        <img align="left" src="/img/Карта.png" width="25px" height="25px" class="img-menu2">
+                        <img align="left" src="/img/карта.png" width="25px" height="25px" class="img-menu2">
                         <div class="inner2">
                                 <a class="align-self-center" href="/personsmap">
                                         Карта <span class="d-none d-xl-block">заинтересованных сторон</span>
