--- a/src/views/about.html
+++ b/src/views/about.html
@@ -6,7 +6,23 @@
 <link rel="stylesheet" href="/css/search.css">
     <div class="content row">
         <div class="result-search col-xl-9 col-md-7 col-sm-7 col-6">
-            <center><p>Здесь будет записанная в БД инфа о компании</p></center>
+                
+                <br>
+                <center><h4>Инжиниринговый дивизион Госкорпорации «Росатом» </h4></center>
+                <br>
+                <p>
+                - включает в себя четыре ключевые организации: АО ИК «АСЭ» (г. Нижний Новгород) – управляющая компания, АО АСЭ (г. Нижний Новгород), АО «Атомэнергопроект» (г. Москва), АО «АТОМПРОЕКТ» (г. Санкт-Петербург); 
+                </p><p>
+                -  занимает более 30% глобального рынка сооружения атомных электростанций;
+                </p><p>
+                - оказывает услуги по управлению проектом, проектированию, поставке оборудования и сооружению безопасных и надежных атомных электростанций с реакторами типа ВВЭР поколения III/III+, конкурентоспособных по стоимости и срокам сооружения;
+                </p><p>
+                - имеет высокий уровень компетенций управленческой команды и операционного персонала, собственные проектные мощности и инженерно-техническую базу.
+                </p>
+                <br>
+                <p>
+                Устойчивое развитие дивизиона удовлетворяет критериям экономической и экологической целесообразности, и социальным интересам общества и государств.
+                </p>  
         </div>
         {% include "templates/sideMenuTemplate.html" %}
     </div>
