--- a/src/views/contacts.html
+++ b/src/views/contacts.html
@@ -6,7 +6,34 @@
 <link rel="stylesheet" href="/css/search.css">
     <div class="content row">
         <div class="result-search col-xl-9 col-md-7 col-sm-7 col-6">
-            <center><p>Здесь будут контакты</p></center>
+                <br>
+                <center><h4>Филиалы  АО ИК "АСЭ":</h4></center>
+                <br>
+                <p>АО ИК «АСЭ» 
+                Место нахождения (Почтовый адрес): 603006, Нижний Новгород, пл. Свободы, д. 3 
+                Тел. +7 (831) 421-79-00
+                 Факс: +7 (831) 419-84-90; +7 (831) 421-06-04
+                 E-mail: niaep@niaep.ru
+                </p>
+                
+                <p>АО АСЭ 
+                Место нахождения: 603006, Нижний Новгород, пл. Свободы, д. 3
+                 Почтовый адрес: 127434, Москва, Дмитровское шоссе, д. 2, стр. 1 
+                Тел. +7 (495) 737-90-37 
+                E-mail: post@atomstroyexport.ru
+                </p>
+                
+                <p>АО «Атомэнергопроект» 
+                Место нахождения (Почтовый адрес): 105005, Москва, ул. Бакунинская, д. 7 стр. 1 
+                Тел. +7 (495) 633-50-50 
+                E-mail: info@aep.ru
+                </p>
+                
+                <p>АО «АТОМПРОЕКТ» 
+                Место нахождения (Почтовый адрес): 197183, Санкт-Петербург, ул. Савушкина, д. 82 лит. А.
+                 Тел. +7 (812) 339-15-15 (многоканальный) 
+                E-mail: info@atomproekt.com
+                </p>
         </div>
         {% include "templates/sideMenuTemplate.html" %}
     </div>
