--- a/src/views/logPage.html
+++ b/src/views/logPage.html
@@ -64,7 +64,8 @@
         <div class="col-md-4 content-block">
             <div class=" ">
                 <img src="/img/info.png" width="32px" height="32px">
-                <p>Для возможности авторизации в качестве заинтересованной стороны пройдите регистрацию.</p>
+                <p style="font-size:9pt;">«Зарегистрированный пользователь» - любой зарегистрировавшийся посетитель платформы.  Зарегистрированные пользователи, помимо доступа к публичным материалам, размещенным на платформе (годовые отчеты, материалы проведенных мероприятий), получают возможность участвовать в проводимых компанией  публичных опросах и скачивать аналитику по результатам таких опросов. </p>
+                <p style="font-size:9pt;">«Заинтересованные стороны» (стейкхолдеры) - это физические и/или юридические лица, а также группы лиц, которые своими действиями влияют на деятельность Инжинирингового дивизиона Госкорпорации «Росатом» и/или испытывают на себе ее влияние. «Стейкхолдеры» получают расширенный доступ к материалам и функционалу платформы через «личный кабинет».  В личном кабинете стейкхолдеры имеют возможность учувствовать в обсуждении материалов (концепций, проектов отчетов и т.п.), получать персональные приглашения на мероприятия, наряду с общими опросами участвовать в опросах стейкхолдеров и получать аналитику по результатам таких опросов. </p>
             </div>
         </div>
         <div class="col-md-2"></div>
