--- a/src/views/templates/sideMenuTemplate.html
+++ b/src/views/templates/sideMenuTemplate.html
@@ -60,7 +60,7 @@
                         <a href="/feedback">
                                         <div class="wrapper">
                                                 <!-- <img src="/img/lk/about_company.png" alt="psurveys"> -->
-                                                обратная связь
+                                                Обратная связь
                                         </div>
                                 </a>
                 </li>
