--- a/src/views/events.html
+++ b/src/views/events.html
@@ -43,7 +43,7 @@
                   </div>
                 
                   </div>
-                  <p class="card-text mb-auto"><img src="img/reportthems.png" class="mr-1">{{event.description}}</p>
+                  <p class="card-text mb-auto"><img src="img/reportthems.png" class="mr-1">{{event.description | truncate(100, true, "...")}}</p>
                 </div>
           </div>
             
