--- a/src/views/eventPage.html
+++ b/src/views/eventPage.html
@@ -42,7 +42,7 @@
                                 </div>
                               
                                 </div>
-                                <p class="card-text mb-auto"><img src="/img/reportthems.png" class="mr-1">{{event.description}}</p>
+                                <p class="card-text mb-auto"><img src="/img/reportthems.png" class="mr-1">{{event.description | striptags(true) | escape | nl2br}}</p>
                               </div>
                         </div>
           </div>
