--- a/src/views/personmap.html
+++ b/src/views/personmap.html
@@ -8,7 +8,7 @@
 <hr>
     <div class="content row">
         <div class="result-search col-xl-9 col-md-9 col-sm-9 col-12 text-center">
-            <p>text</p>
+            <p>Карта заинтересованных стороне появится на сайте в блажйшее время.</p>
         </div>
         {% include "templates/sideMenuTemplate.html" %}
     </div>
