--- a/src/views/lkadmin.html
+++ b/src/views/lkadmin.html
@@ -50,18 +50,18 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="reportStandarts">Стандарты</label>
-                                        <input type="text" class="form-control" id="reportStandarts" name="standarts" placeholder="Введите по каким стандартам выполнен отчет">
+                                        <textarea class="form-control" id="reportStandarts" name="standarts"  rows="4"></textarea>
                                     </div>
                                     <div class="form-group">
                                         <label for="reportRevards">Награды отчета</label>
-                                        <input type="text" class="form-control" id="reportRevards" name="revards" placeholder="Введите награды отчета">
+                                        <textarea class="form-control" id="reportRevards" name="revards"  rows="4"></textarea>
                                     </div>
                                     <div class="form-group">
-                                        <label for="pdfReport">Загрузите pdf отчета</label>
+                                        <label for="pdfReport">Загрузите pdf отчета (ru)</label>
                                         <input type="file" accept="application/pdf" class="form-control-file" id="pdfReport" name="pdf">
                                     </div>
                                     <div class="form-group">
-                                        <label for="pdfReportEng">Загрузите pdf отчета</label>
+                                        <label for="pdfReportEng">Загрузите pdf отчета (en)</label>
                                         <input type="file" accept="application/pdf" class="form-control-file" id="pdfReportEng" name="pdfEng">
                                     </div>
                                     <div class="form-group">
