--- a/src/views/reportPage.html
+++ b/src/views/reportPage.html
@@ -56,7 +56,7 @@
                   </div>
                   <p class="card-text mb-auto"><img src="img/reportthems.png">Приоритетные темы отчета:</p>
                   <div class="container">
-                      <span>{{report.thems  | striptags(true) | escape | nl2br}}</span>
+                      <span>{{report.description  | striptags(true) | escape | nl2br}}</span>
                   </div>
                 </div>
           </div>
