--- a/src/views/registration.html
+++ b/src/views/registration.html
@@ -28,6 +28,8 @@
                             <br>
                             <input name="password1" class="form-control" type="password" placeholder="Повторите пароль" id="pas">
                             <br>
+                            <input name="email" class="form-control" placeholder="E-mail" id="log">
+                            <br>
                             <p>*тут будет капча*</p>
                             <button class="auth-button btn btn-primary btn-block" type="submit">Регистрация</button>
                         </form>
