--- a/src/views/AllSurvey.html
+++ b/src/views/AllSurvey.html
@@ -9,8 +9,8 @@
         <div class="result-search col-xl-9 col-md-9 col-sm-9 col-12 text-center">
                 {% if mas_name %}
                         <h2>Доступные опросы:</h2>
-                        {% for name in mas_name %}
-                        <a href={{'/survey/name'+name}}>{{name}} ({{mas_desc.shift()}})</a>
+                        {% for it in mas_name %}
+                        <a href={{'/survey/id'+it.id}}>{{it.name}} ({{mas_desc.shift()}})</a>
                         <br>
                         {% endfor %}
                 {% else %}
@@ -19,8 +19,8 @@
                 {% endif %}
                 {% if res_name %}
                         <h2>Результаты опросов:</h1>
-                        {% for name in res_name %}
-                        <a href={{'/survey/name'+name}}>{{name}} ({{res_desc.shift()}})</a>
+                        {% for it in res_name %}
+                        <a href={{'/survey/id'+it.id}}>{{it.name}} ({{res_desc.shift()}})</a>
                         <br>
                         {% endfor %}
                 {% endif %}
