--- a/src/views/SurveyForAdmin.html
+++ b/src/views/SurveyForAdmin.html
@@ -1,16 +1,12 @@
-<!doctype html>
-<html lang="rus">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/surveyforadmin.css">
-    <title></title>
-  </head>
-  <body>
+{% extends "templates/pageTemplate.html" %}
+        <!-- Для шапки и футера однозначно нужен темплейт -->
+{% block content %}
+<link rel="stylesheet" href="/css/search.css">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+{% include "templates/pageTopMenu.html" %}
+<hr>
+    <div class="content row">
+    <div class="result-search col-xl-9 col-md-7 col-sm-7 col-6 text-center">
     <div class="container name">
         <h1>Все результаты:</h1>
         <table>
@@ -33,10 +29,14 @@
         <form  method="POST" enctype="multipart/form-data">
             <p>прикрепить файл: <input name="file_an" type="file"> добавить аннотацию: <input type="text" name="text_an" ></p>
             <p><input type="submit"></p>
-           </form>
+        </form>
            <div class="container res">{{response}}</div>
 
     </div>
+</div>
+{% include "templates/sideMenuTemplate.html" %}
+</div>
+{% endblock %}
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
