--- a/src/views/lk.html
+++ b/src/views/lk.html
@@ -69,7 +69,7 @@
                                         {%if item.agr %}
                                         <p>Документ согласован</p>
                                         {%else%}
-                                        <form  method="POST" action={{'/fileNegotiation/all/agr'+item.name}}>
+                                        <form  method="POST" action={{'/fileNegotiation/all/agr'+item.id}}>
                                                 <p><input type="submit" value="согласовать" class="auth-button btn btn-primary btn-block agr"></p>
                                         </form>
                                         {%endif%}
@@ -99,7 +99,7 @@
                                                         {% endfor %}
                                                 </div>
 
-                                                <form action={{'/fileNegotiation/all/msg'+item.name}} method="POST">
+                                                <form action={{'/fileNegotiation/all/msg'+item.id}} method="POST">
                                                         <input class="comment form-control" type="text" placeholder="Напишите сообщение и нажмите Enter" name="dialog">
                                                 </form>
                                         </div>
