--- a/src/views/fileNegotiationForAdminDialog.html
+++ b/src/views/fileNegotiationForAdminDialog.html
@@ -14,10 +14,10 @@
               {{d.sender}}: {{d.text}} <br>
               {% endfor %}</p>
               <form method="POST">
-                  <p><input type="text" name="dialog" class="dialog-input"> <input type="submit" class="auth-button btn btn-primary btn-block but"></p>
+                  <p><input type="text" name="dialog" class="dialog-input"> <button type="submit"> отправить </button></p>
               </form>
               <form method="POST" action="back">
-                    <p><input type="submit" value="назад к списку" class="auth-button btn btn-primary btn-block but"></p>
+                    <p><button type="submit"> назад к списку </button></p>
                 </form>
 
               
