--- a/src/views/Survey.html
+++ b/src/views/Survey.html
@@ -32,7 +32,7 @@
           {% endif %}
           <br>
           {% if question %}
-          <button class="send auth-button btn btn-primary btn-block ">отправить</button>
+          <button class="send">отправить</button>
           {% endif %}
           <div class="container result"></div>
         </div>
