--- a/src/views/fileNegotiationForAdmin.html
+++ b/src/views/fileNegotiationForAdmin.html
@@ -21,10 +21,10 @@
       <div class="container update">
         <form  method="POST" enctype="multipart/form-data">
           <p>Обновить файл: <input name="file" type="file"></p>
-          <p><input type="submit" class="auth-button btn btn-primary btn-block but"></p>
+          <p> <button type="submit"> отправить </button></p>
         </form>
         <form method="POST" action="back">
-            <p><input type="submit" value="назад к списку" class="auth-button btn btn-primary btn-block but"></p>
+            <p><button type="submit"> назад к списку </button></p>
         </form>
       </div>
       <div class="container result">{{response}}</div>
